[build-system]

requires = ["setuptools>=70", "wheel", "numpy>=1.23"]
build-backend = "setuptools.build_meta"

[project]
name = "ligotools"
description = "LIGO utilities from the LOSC tutorial for Stat 159 HW3."
readme = "README.md"
requires-python = ">=3.8" #not 3.9 as per HW3 descriptions to match the environment.yml file

authors = [
  { name = "LIGO Scientific Collaboration (LSC)" },
  { name = "Emily Hsu" }  
]

dependencies = [
  "numpy==1.23",
  "scipy==1.8",
  "matplotlib==3.5",
  "h5py==3.7",
  "ipython==8.2",
  "ipykernel==5.5",
  "decorator==5.1"
]

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/emilyhsu1/hw3-emilyhsu1"
Issues   = "https://github.com/emilyhsu1/hw3-emilyhsu1/issues"

[tool.setuptools]
packages = ["ligotools"]

[tool.setuptools.dynamic]
version = { attr = "ligotools.__version__" }
